--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="top-container">
         <img src="cloud.png" class="top-cloud" alt="cloud-img">
         <h1>I'm Shibli</h1>
-        <h2>A <span class="pro">Pro</span>grammer</h2>
+        <h2>A <span class="pro">pro</span>grammer</h2>
         <img src="cloud.png" class="bottom-cloud" alt="cloud-img">
         <img src="mountain.png" alt="mountain-img">
     </div>
