--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="profile">
           <img src="84792951.jpg" alt="" class="profilepic">
           <h2>Hello.</h2>
-          <p class="intro">I am a programmer who knows various languages like C/C++, Python and PHP. I have a keen interest in Full stack web development.</p>
+          <p class="intro">I am a programmer who knows various languages like C/C++, Python and PHP. I have a keen interest in Full stack web development and robotics 🤖</p>
         </div>
         <hr>
         <div class="skills">
@@ -56,7 +56,7 @@
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/ahmed-raza-shibli-b038051ab?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bz3tvgE9ySeqe8HD8V%2BtY2g%3D%3D">LinkedIn</a>
         <a class="footer-link" href="https://github.com/Shibli2316">Github</a>
-        <a class="footer-link" href="https://shibli2316.github.io/CV/">Website</a>
+        <a class="footer-link" href="https://shibli2316.github.io/First-Portfolio-Website/">Website</a>
         <p class="copyright">© Ahmad Raza Shibli.</p>
       </div>
       
